<resources>
    <string name="app_name">Community App</string>

    <!-- Strings related to sign in -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_google">Sign in with Google</string>
    <string name="welcome">"Welcome !"</string>
    <string name="logout">Log out</string>

    <!-- Strings related to Navigation drawer (Menu) -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">email@address.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Strings related to menu -->
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_reminders">Reminders</string>
    <string name="community">Communities</string>

    <!-- Strings related title of activities -->
    <string name="title_activity_newsfeed">Newsfeed</string>
    <string name="title_activity_profile">Edit Profile</string>
    <string name="title_activity_createNotice">Create Notice</string>
    <string name="title_activity_notifications">Notifications</string>

    <!-- random text -->
    <string name="random">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor..</string>
    <string name="submit">Submit</string>
    <string name="notice_headline">Notice Headline</string>
    <string name="headline">Headline</string>
    <string name="subheadline">Sub-headline</string>
    <string name="more_information">More information</string>
    <string name="author">Author</string>
    <string name="body">Body</string>
    <string name="attach_a_file">Attach a file</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="date">Date</string>
    <string name="add_reminder">Remind me</string>
    <string name="lost_pet">Lost Pet</string>
    <string name="description">Description</string>
    <string name="Title">Title</string>
    <string name="username">Username</string>
    <string name="preferred_username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="select_communities_to_follow">Select communities to follow</string>
    <string name="profile_icon">profile icon</string>
    <string name="welcome_to_the_community_app">Welcome to the Community App!</string>
    <string name="connecting_communities">Connecting communities</string>
    <string name="logo">logo</string>
    <string name="category">category</string>
    <string name="inbox">Inbox</string>
    <string name="area_1">Area 1</string>
    <string name="area_2">Area 2</string>
    <string name="user_type">Type of user</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="status">Status</string>
    <string name="filterby">Filter by</string>
    <string name="crime_report">Crime Reports</string>
    <string name="local_news">Local News</string>
    <string name="missing_pet">Missing Pets</string>
    <string name="events">Events/Entertainment</string>
    <string name="tradesmen_refferals">Tradesmen Referrals</string>
    <string name="fundraiser">Fundraiser</string>
    <string name="recommendations">Recommendations</string>
    <string name="remove">Remove</string>
    <string name="file_attachment">file attachment</string>
    <string name="enter_email">Enter email address</string>
    <string name="no_disclaimer">This notice will be posted to the selected community\'s newsfeed.</string>
    <string name="disclaimermsg">This notice will be sent to Admin for approval before it is posted.</string>
    <string name="notice_image_attachment">Notice image attachment</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="user_icon">User icon</string>
    <string name="community_app_title">Community App title</string>
    <string name="select_community">Community</string>
    <string name="disclaimer_msg_hint">This notice will/will not be posted straight to the newsfeed</string>
    <string name="dislike">Dislike</string>
    <string name="select_date">Select Date</string>
    <string name="calender_dialog">Calender dialog</string>
    <string name="crime_date">Set date that crime occurred</string>
    <string name="event_date">Set date of event</string>
    <string name="fundraiser_date">Set fundraiser date</string>
    <string name="news_date">Set news date</string>
    <string name="pet_date">Set date last seen</string>
    <string name="empty">Empty</string>
    <string name="nothing">Nothing to show</string>
    <string name="add_a_comment">Add a comment</string>

    <!-- Strings related to user types -->
    <string-array name="user_type">
        <item>General user</item>
        <item>Organization</item>
    </string-array>

    <string-array name="communities_options">
        <item>UCT</item>
        <item>Rondebosch</item>
        <item>Claremont</item>
        <item>Goodwood</item>
        <item>Panorama</item>
        <item>Plattekloof</item>
        <item>Monte Vista</item>
    </string-array>

    <string-array name="reminder_options">
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>1 day</item>
        <item>1 week</item>
    </string-array>

    <string-array name="notice_categories">
        <item>Select a Category</item>
        <item>Local News</item>
        <item>Crime Report</item>
        <item>Events/Entertainment</item>
        <item>Fundraiser</item>
        <item>Missing Pet</item>
        <item>Tradesmen Referrals</item>
        <item>Recommendations</item>
    </string-array>

</resources>
