<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/colorCard"
    app:cardElevation="2dp"
    android:padding="5dp"
    android:background="#fff"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/comment_username"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/colorAccent"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/comment_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/comment"
            android:textColor="@color/colorDescription"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/comment_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDate"
            android:layout_gravity="end"
            android:text="@string/date"
            android:textSize="12sp"
            tools:ignore="RelativeOverlap" />

    </LinearLayout>
</androidx.cardview.widget.CardView>