<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp"
    app:cardBackgroundColor="@color/colorCard"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp"
    android:background="#fff"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">

        <TextView
            android:id="@+id/MsgDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDate"
            android:text="@string/date"
            android:textSize="12sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            android:textColor="@color/colorSubject"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textColor="@color/colorMessage"
            android:textSize="16sp"
            android:layout_below="@+id/subject" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>