<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".Welcome">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcomeMsg"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:shadowColor="#DBDCDE"
            android:text="@string/welcome_to_the_community_app"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#424040"
            android:textSize="20sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif" />

        <TextView
            android:id="@+id/welcomeMsg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connecting_communities"
            android:textAlignment="center"
            android:layout_marginBottom="30dp"
            android:textColor="#9A9C98"
            android:textSize="20sp"
            android:typeface="normal"
            app:fontFamily="sans-serif-medium" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="190dp"
            android:layout_height="180dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="280dp"
            android:layout_height="56dp"
            android:background="@drawable/rounded_btn"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:layout_marginTop="40dp"
            android:drawableLeft="@drawable/google"
            android:text="@string/action_sign_in_google"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold"
            android:focusable="true"
            android:paddingStart="15dp"
            android:drawableStart="@drawable/google" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>