<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">

        <LinearLayout
            android:id="@+id/news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/Title"
                android:textColor="@color/colorHeadline"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/category"
                android:textSize="12sp"
                android:textStyle="italic" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:id="@+id/file"
                app:srcCompat="@drawable/ic_image" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorDescription"
                android:text="@string/description"
                android:textSize="16sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/news"
            android:id="@+id/user_info"
            android:layout_marginTop="10dp">

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/add_reminder"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:focusable="true"
                android:background="@color/white"
                android:drawableTop="@drawable/ic_add_reminder"
                android:text="@string/add_reminder"
                android:textAllCaps="false"
                android:textColor="@color/colorDate"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/removeNotice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_delete"
                android:text="@string/remove"
                android:layout_margin="5dp"
                android:textSize="12sp"
                android:clickable="true"
                android:focusable="true"
                android:textAllCaps="false"
                android:visibility="visible"
                android:textColor="@color/colorDate"
                android:background="@color/white"
                android:layout_toLeftOf="@+id/add_reminder"
                android:layout_toStartOf="@+id/add_reminder" />


            <ImageView
                android:id="@+id/user"
                android:layout_width="35dp"
                android:layout_height="34dp"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_user_profile" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toRightOf="@+id/user"
                android:layout_toEndOf="@+id/user"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_centerVertical="true"
                android:id="@+id/userDetails">

                <TextView
                    android:id="@+id/userPosted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/username"
                    android:textColor="@color/colorPosted"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/datePosted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/date"
                    android:textSize="12sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:id="@+id/seperator"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/userDetails"
                android:layout_toEndOf="@+id/userDetails"
                android:background="?android:attr/listDivider"
                android:layout_margin="10dp" />
            <TextView
                android:id="@+id/area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/seperator"
                android:gravity="center"
                android:text="@string/area"
                android:textSize="12sp"
                android:layout_toEndOf="@+id/seperator" />


        </RelativeLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>