<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">

        <LinearLayout
            android:id="@+id/news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/Title"
                android:textColor="@color/colorHeadline"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/category"
                android:textSize="12sp"
                android:textStyle="italic" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:id="@+id/file"
                app:srcCompat="@drawable/ic_image" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorDescription"
                android:text="@string/description"
                android:textSize="16sp" />
        </LinearLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/news"
            android:id="@+id/user_info"
            android:layout_marginTop="10dp">

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:id="@+id/add_reminder"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="2dp"
                android:layout_marginEnd="2dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingRight="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/reminder_btn"
                android:drawableStart="@drawable/ic_add_reminder"
                android:drawableLeft="@drawable/ic_add_reminder"
                android:focusable="auto"
                android:text="@string/add_reminder"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="1dp"
                app:srcCompat="@drawable/ic_user_profile"
                android:id="@+id/user"/>

            <TextView
                android:id="@+id/userPosted"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_toEndOf="@id/user"
                android:layout_toRightOf="@id/user"
                android:layout_marginStart="2dp"
                android:text="@string/username"
                android:textColor="@color/colorPosted"
                android:textSize="12sp"
                android:layout_marginLeft="2dp" />

            <TextView
                android:id="@+id/datePosted"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_toEndOf="@id/userPosted"
                android:layout_toRightOf="@id/userPosted"
                android:gravity="center"
                android:text="@string/date"
                android:textSize="12sp" />



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_info"
            android:layout_marginTop="10dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/color_reject"
                android:text="Remove Notice"
                android:textColor="@color/white"
                />
        </RelativeLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>